更新 1. accordion 2. alert

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -2,6 +2,7 @@
 // Option A: Include all of Bootstrap
 
 $primary: lightblue;
+$accordion-button-active-bg: lightpink;
 
 @import "../bootstrap/scss/bootstrap.scss";
 
